@@ -18,7 +18,6 @@
 		<li>Track connection usage by property dialogs to prevent closing used connections
 		<li>Allow Sequence to be attached to existing int4/int8 columns
 		<li>Display column comments in table definition
-		<li>Allow unix socket connections
 		<li>Allow server registration without connect
 		<li>Sequence: calculate next value to be expected
 		<li>language update check
