@@ -19,8 +19,14 @@ pgAdmin tree.
 If you're experiencing connection problems, check the <a href="connect-error.html">connection problems</a> page.
 </P>
 <P>
-The address is the IP address of the machine to contact, or the full
-qualified domain name. The description is a text to identify the
+The address is the IP address of the machine to contact, or the fully
+qualified domain name. On Unix based systems the address field may 
+be left blank to use the default PostgreSQL Unix Domain Socket on
+the local machine, or be set to an alternate path containing a PostgreSQL
+socket. If a path is entered, it must begin with a "/".
+</P> 
+<P>
+The description is a text to identify the
 server in the pgAdmin tree.
 </P>
 <P>
