@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-04-15 DP        Unix Domain Socket support as inspired by Dominique Quatravaux
     <li>2005-04-07 AP        VACUUM hint
     <li>2005-04-04 AP        Control dependent win32 services
     <li>2005-04-01 AP        Speed up of column property retrieval
